force-app/main/default/objects/AppLogging__c/AppLogging__c.object-meta.xml
<CustomObject>
    <description>Enregistre les entrées de log persistées depuis Platform Events</description>
    <label>Journal d'Application</label>
    <nameField>
        <displayFormat>LOG-{0000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journaux d'Application</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>