force-app/main/default/objects/AppLogging__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <label>Classe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>