force-app/main/default/objects/AppLogging__c/fields/Exception_Message__c.field-meta.xml
<CustomField>
    <fullName>Exception_Message__c</fullName>
    <label>Message Exception</label>
    <length>255</length>
    <type>Text</type>
</CustomField>