force-app/main/default/objects/AppLogging__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Niveau</label>
    <length>20</length>
    <type>Text</type>
</CustomField>