force-app/main/default/objects/AppLogging__c/fields/Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Request_Id__c</fullName>
    <label>ID Requête</label>
    <length>255</length>
    <type>Text</type>
</CustomField>